[gd_scene load_steps=3 format=3 uid="uid://b7elwouqyerqb"]

[ext_resource type="Script" path="res://scripts/challenge2.gd" id="1_rkq6s"]
[ext_resource type="PackedScene" uid="uid://cjk8iulp0ax2q" path="res://scenes/MyOptBtn.tscn" id="2_cp7ki"]

[node name="Challenge" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(577, 330)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(2, -1)
script = ExtResource("1_rkq6s")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(3.00817e-06, 0.474507, 0.11392, 1)
metadata/_edit_lock_ = true

[node name="CodeEdit" type="CodeEdit" parent="ColorRect"]
unique_name_in_owner = true
custom_minimum_size = Vector2(577, 330)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "#include <stdio.h>
int main(void)  {
    int tam_jardim = 8;
	for (int i = 1;                                      ; i++)
	{
    	if (i % 2         0) 
			platarArvore(i);
	}
}"
editable = false
gutters_draw_line_numbers = true
metadata/_edit_lock_ = true

[node name="IfOption" parent="ColorRect/CodeEdit" instance=ExtResource("2_cp7ki")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 119.0
offset_top = 137.0
offset_right = 119.0
offset_bottom = 137.0
grow_horizontal = 1
grow_vertical = 1

[node name="ForOption" parent="ColorRect/CodeEdit" instance=ExtResource("2_cp7ki")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 137.0
offset_top = 84.0
offset_right = 137.0
offset_bottom = 84.0
grow_horizontal = 1
grow_vertical = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CodeEdit"]
layout_mode = 0
offset_left = 15.0
offset_top = 303.0
offset_right = 515.0
offset_bottom = 570.0
theme_override_constants/separation = 10
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="ColorRect/CodeEdit/VBoxContainer"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="Aviso" type="Label" parent="ColorRect/CodeEdit/VBoxContainer/ColorRect"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
offset_left = 2.0
offset_top = 1.0
offset_right = 502.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
autowrap_mode = 3
metadata/_edit_lock_ = true

[node name="Btns" type="HBoxContainer" parent="ColorRect/CodeEdit/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 300
metadata/_edit_lock_ = true

[node name="RunBtn" type="Button" parent="ColorRect/CodeEdit/VBoxContainer/Btns"]
unique_name_in_owner = true
layout_mode = 2
text = "Run Code"
metadata/_edit_lock_ = true

[node name="CloseBtn" type="Button" parent="ColorRect/CodeEdit/VBoxContainer/Btns"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="ColorRect/CodeEdit/VBoxContainer"]
layout_mode = 2
text = "

################################################

Plante 4 Ã¡rvores ao lado :D

Boa Sorte!!!
################################################"
autowrap_mode = 3
metadata/_edit_lock_ = true

[connection signal="option_selected" from="ColorRect/CodeEdit/IfOption" to="." method="_on_if_option_option_selected"]
[connection signal="option_selected" from="ColorRect/CodeEdit/ForOption" to="." method="_on_for_option_option_selected"]
[connection signal="pressed" from="ColorRect/CodeEdit/VBoxContainer/Btns/RunBtn" to="." method="_on_run_btn_pressed"]
[connection signal="pressed" from="ColorRect/CodeEdit/VBoxContainer/Btns/CloseBtn" to="." method="_on_close_btn_pressed"]
